Added Frequency Table and Barplot

--- a/notebooks/sample_analysis.ipynb
+++ b/notebooks/sample_analysis.ipynb
@@ -48,6 +48,26 @@
     "df = pd.DataFrame(results, columns=columns)\n",
     "df.head()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df['barrier_type'].value_counts().plot(kind='bar')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df['affected_party'].value_counts().plot(kind='bar')"
+   ]
   }
  ],
  "metadata": {
